@@ -135,5 +135,8 @@ oidc-agent (2.1.2) UNRELEASED; urgency=medium
 
   [ Gabriel Zachmann ]
   * Fixed a bug due to which errors during token reocation were ignored
+  * Fixed a bug displaying a (wrong) error message when token revocation
+    succeeded and the server answered with an empty response when using
+    encrypted ipc communication 
 
  -- Marcus Hardt <hardt@kit.edu>  Mon, 10 Dec 2018 13:49:27 +0100
